# tana

./: .env.example  .gitignore  Cargo.toml  LICENSE-MIT  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/migrations/: 001_initial_schema.sql
backend/src/: cli.rs  config.rs  db.rs  error.rs  image.rs  lib.rs  server.rs
backend/src/cli/: add.rs  context.rs  serve.rs  stats.rs
backend/src/cli/add/: book.rs  series.rs
backend/src/cli/delete/: book.rs
backend/src/cli/edit/: movie.rs
backend/src/cli/show/: books.rs  movie.rs  series.rs
backend/src/cli/show/books/: sort.rs
backend/src/cli/show/movie/: sort.rs
backend/src/cli/show/series/: sort.rs
backend/src/db/: migrations.rs  models.rs
backend/src/db/media_type/: book.rs  movie.rs  tv_series.rs
backend/src/db/queries/: movies.rs  tv_series.rs
backend/src/db/queries/books/: count.rs  update.rs
backend/src/db/queries/movies/: delete.rs
backend/src/db/queries/tv_series/: get.rs  update.rs
backend/src/server/: handlers.rs  models.rs  routes.rs
backend/src/server/handlers/: books.rs  health.rs  images.rs  movies.rs  search.rs  series.rs  stats.rs
backend/src/server/models/: book.rs  health.rs  search.rs  series.rs  stats.rs
docs/: CLI.md  PROJECT_STRUCTURE.md  SCHEMA.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  server.js  svelte.config.js  vite.config.js  vite.config.ts
migrations/: 002_add_poster_paths.sql
src/: cli.rs  config.rs  error.rs  image.rs  lib.rs  main.rs  server.rs
web/: README.md  index.html
(+106 files in other folders)
